main.tf
resource "aws_vpc" "uyi_vpc" {
  cidr_block           = "10.123.0.0/16"
  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = {
    Name = "Dev"
  }
}

resource "aws_subnet" "uyi_public_subnet" {
  vpc_id                  = aws_vpc.uyi_vpc.id
  cidr_block              = "10.123.1.0/24"
  map_public_ip_on_launch = true
  availability_zone       = "us-east-1a"

  tags = {
    Name = "Dev-Public"
  }
}

resource "aws_internet_gateway" "uyi_internet_gateway" {
  vpc_id = aws_vpc.uyi_vpc.id

  tags = {
    Name = "Dev-IGW"
  }
}

resource "aws_route_table" "uyi_public_rt" {
  vpc_id = aws_vpc.uyi_vpc.id

  tags = {
    Name = "Dev-RT"
  }
}

resource "aws_route" "default_route" {
  route_table_id         = aws_route_table.uyi_public_rt.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.uyi_internet_gateway.id
}

resource "aws_route_table_association" "uyi_public_assoc" {
  subnet_id      = aws_subnet.uyi_public_subnet.id
  route_table_id = aws_route_table.uyi_public_rt.id
}

resource "aws_security_group" "uyi_sg" {
  name        = "Dev_SG"
  description = "Dev Security Group"
  vpc_id      = aws_vpc.uyi_vpc.id

  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_key_pair" "uyi_auth" {
  key_name = "uyikey"
  public_key = file("~/.ssh/uyikey.pub")
}

resource "aws_instance" "Dev_Node" {
  instance_type = "t2.micro"
  ami = data.aws_ami.server_ami.id
  key_name = aws_key_pair.uyi_auth.id 
  vpc_security_group_ids = [aws_security_group.uyi_sg.id]
  subnet_id = aws_subnet.uyi_public_subnet.id
  user_data = file("userdata.tpl")

  root_block_device {
    volume_size = 10
  }

  tags = {
    Name = "Dev-node"
  }

  provisioner "local-exec" {
    command = templatefile("${var.host_os}-ssh-config.tpl", {
      hostname = self.public_ip,
      user = "ubuntu",
      identityfile = "~/.ssh/uyikey"
    })
    interpreter = var.host_os == "windows" ? ["Powershell", "-Command"] : ["bash", "-c"]
  }
}
